[package]
name = "darkbird-mongo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
darkbird = "6.2.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15.0"
bson = "2.0"
futures = "0.3"